--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<HEAD>
+<head>
   <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet'>
-  <link rel="stylesheet" href="style.css" MEDIA="screen" charset="utf-8">
+  <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   <title>Todo App</title>
-</HEAD>
+</head>
 <body>
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg">
@@ -51,6 +51,6 @@
 </li>
 </ul>
 </div>
-<script SRC="app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
