--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
+    <p id="top-section-for-adding-element-to-list">
       <label class="new-task-label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input class="task" id="new-task" type="text">
@@ -19,7 +19,7 @@
       </div>
     </p>
     <h3 class="list-title">Todo</h3>
-    <ul class="incompleted-tasks-list" id="incompleteTasks">
+    <ul class="incompleted-tasks-list" id="incomplete-tasks">
       <li class="list-item">
         <input class="task-input" type="checkbox">
         <label class="task-label task">Pay Bills</label>
