feat: added alt atributes according the rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="page">
   <div class="header">
-    <img class="header-img" src="./eisenhower-matrix.jpg">
+    <img class="header-img" src="./eisenhower-matrix.jpg"  alt="eisenhower matrix">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
   <div class="main">
@@ -26,7 +26,7 @@
         <input class="task-input task-text-input task" type="text">
         <button class="edit task-btn">Edit</button>
         <button class="delete task-btn">
-          <img class="btn-img" src="./remove.svg">
+          <img class="btn-img" src="./remove.svg"  alt="">
         </button>
       </li>
       <li class="list-item edit-mode">
@@ -35,7 +35,7 @@
         <input class="task-input task-text-input task" type="text" value="Go Shopping">
         <button class="edit task-btn">Save</button>
         <button class="delete task-btn">
-          <img class="btn-img" src="./remove.svg"></button>
+          <img class="btn-img" src="./remove.svg" alt=""></button>
       </li>
     </ul>
     <h3>Completed</h3>
@@ -46,7 +46,7 @@
         <input class="task-input task-text-input task" type="text">
         <button class="edit task-btn">Edit</button>
         <button class="delete task-btn">
-          <img class="btn-img" src="./remove.svg">
+          <img class="btn-img" src="./remove.svg"  alt="">
         </button>
       </li>
     </ul>
