--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <title>Todo App</title>
 </head>
 <body class="page">
-  <div class="header">
+  <header class="header">
     <img class="header-img" src="./eisenhower-matrix.jpg"  alt="eisenhower matrix">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-  </div>
-  <div class="main">
+  </header>
+  <main class="main">
     <p id="create-task-block">
       <label class="new-task-label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
@@ -50,7 +50,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
