refactor: added semantic tags according the rule 1.1 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <p id="create-task-block">
+    <section id="create-task-block">
       <label class="new-task-label" for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input class="task" id="new-task" type="text">
         <button class="task-btn">Add</button>
       </div>
-    </p>
+    </section>
     <h3 class="list-title">Todo</h3>
     <ul class="incompleted-tasks" id="incomplete-tasks">
       <li class="list-item">
