--- a/index.html
+++ b/index.html
@@ -18,38 +18,42 @@
         <button class="task-btn">Add</button>
       </div>
     </section>
-    <h3 class="list-title">Todo</h3>
-    <ul class="incompleted-tasks" id="incomplete-tasks">
-      <li class="list-item">
-        <input class="task-input task-check-input" type="checkbox">
-        <label class="task-label task">Pay Bills</label>
-        <input class="task-input task-text-input task" type="text">
-        <button class="edit task-btn">Edit</button>
-        <button class="delete task-btn">
-          <img class="btn-img" src="./remove.svg"  alt="">
-        </button>
-      </li>
-      <li class="list-item edit-mode">
-        <input class="task-input task-check-input" type="checkbox">
-        <label class="task-label task">Go Shopping</label>
-        <input class="task-input task-text-input task" type="text" value="Go Shopping">
-        <button class="edit task-btn">Save</button>
-        <button class="delete task-btn">
-          <img class="btn-img" src="./remove.svg" alt=""></button>
-      </li>
-    </ul>
-    <h3>Completed</h3>
-    <ul class="completed-tasks" id="completed-tasks">
-      <li class="list-item">
-        <input class="task-input task-check-input" type="checkbox" checked>
-        <label class="task-label task">See the Doctor</label>
-        <input class="task-input task-text-input task" type="text">
-        <button class="edit task-btn">Edit</button>
-        <button class="delete task-btn">
-          <img class="btn-img" src="./remove.svg"  alt="">
-        </button>
-      </li>
-    </ul>
+    <section>
+      <h3 class="list-title">Todo</h3>
+      <ul class="incompleted-tasks" id="incomplete-tasks">
+        <li class="list-item">
+          <input class="task-input task-check-input" type="checkbox">
+          <label class="task-label task">Pay Bills</label>
+          <input class="task-input task-text-input task" type="text">
+          <button class="edit task-btn">Edit</button>
+          <button class="delete task-btn">
+            <img class="btn-img" src="./remove.svg"  alt="">
+          </button>
+        </li>
+        <li class="list-item edit-mode">
+          <input class="task-input task-check-input" type="checkbox">
+          <label class="task-label task">Go Shopping</label>
+          <input class="task-input task-text-input task" type="text" value="Go Shopping">
+          <button class="edit task-btn">Save</button>
+          <button class="delete task-btn">
+            <img class="btn-img" src="./remove.svg" alt=""></button>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h3>Completed</h3>
+      <ul class="completed-tasks" id="completed-tasks">
+        <li class="list-item">
+          <input class="task-input task-check-input" type="checkbox" checked>
+          <label class="task-label task">See the Doctor</label>
+          <input class="task-input task-text-input task" type="text">
+          <button class="edit task-btn">Edit</button>
+          <button class="delete task-btn">
+            <img class="btn-img" src="./remove.svg"  alt="">
+          </button>
+        </li>
+      </ul>
+    </section>
   </main>
   <script src="app.js"></script>
 </body>
