--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </ul>
     </section>
     <section>
-      <h3>Completed</h3>
+      <h3 class="list-title">Completed</h3>
       <ul class="completed-tasks" id="completed-tasks">
         <li class="list-item">
           <input class="task-input task-check-input" type="checkbox" checked>
